<resources>
    <string name="app_name">Certis_Base_App</string>
    <string name="title_account_registration">Account Registration</string>
    <string name="title_mobile_verification">Account Registration - Mobile Verification</string>
    <string name="title_password_creation">Account Registration - Password Creation</string>
    <string name="snackbar_failed_message_text">Verification failed. Please Retry.</string>
    <string name="snackbar_action_dismiss">DISMISS</string>
    <string name="snackbar_photo_accepted">1st Photo Accepted.</string>
    <string name="snackbar_action_view">VIEW</string>
    <string name="text_registration_step">Registration Step</string>
    <string name="text_registration_step_1">1</string>
    <string name="text_registration_step_2">2</string>
    <string name="text_registration_step_3">3</string>
    <string name="text_registration_step_4">4</string>
    <string name="text_otp_instruction">Confirmation code has been sent to:</string>
    <string name="text_max_registration_step">/ 4</string>
    <string name="text_registration_instruction">Please enter the fields below:</string>
    <string name="registration_step_1">step1</string>
    <string name="hint_staff_id">Staff ID</string>
    <string name="hint_phone_no">Phone Number</string>
    <string name="hint_confirm_password">Re-enter Password</string>
    <string name="hint_enter_password">Enter Password</string>
    <string name="hint_otp_default">0</string>
    <string name="next">next</string>
    <string name="otp_phone_no_text">+882 496 5636</string>
    <string name="otp_recieve_label">You will receive a verification code via SMS within 10 minutes. Please enter the code above.</string>
    <string name="otp_resend_code">Resend Code</string>
    <string name="otp_verification_successful">Verification successful!</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="menu_submit_photo">SUBMIT PHOTO</string>
    <string name="camera_retake_photos">retake photos</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="camera_capture_picture">capture</string>
    <string name="camera_label">Registration Step  3</string>
    <string name="camera_follow_note">Take 2 photos of your face for sign in validation reference</string>
    <string name="camera_photo_rejected">Photo Rejected</string>
    <string name="camera_photo_rejected_note">Please ensure that you are in a well-lit environment and place your face within the frame provided</string>
    <string name="landing_create_account">Create an account</string>
    <string name="password_criteria_title">Password creation criteria</string>
    <string name="password_character_label">Characters</string>
    <string name="password_character_criteria">8+</string>
    <string name="password_number_criteria">#</string>
    <string name="password_number_label">Number/s</string>
    <string name="password_lower_alphabet_criteria">A</string>
    <string name="password_upper_alphabet_criteria">a</string>
    <string name="password_lower_alphabet_label">At least 1 upper case</string>
    <string name="password_upper_alphabet_label">At least 1 lower case</string>
    <string name="password_rules">• At least ONE special character (e.g. !@#$%*)\n• Not be based on a dictionary word\n• Not be based on personal information, names of family members, etc.\n• Not be the same as the PW used other accounts</string>
    <string name="password_creation_label">Please create a strong password:</string>
    <string name="password_create_password">Create Password</string>
    <string name="password_not_matched">Those passwords do not match. Try again.</string>
    <string name="password_not_follow_criteria">Password does not follow the password creation criteria.</string>
    <string name="password_criteria_fail">Password does not follow the password creation criteria.</string>
    <string name="camera_photo_submitted">Photo successfully submitted</string>
    <string name="camera_place_face_within_frame">Place your face within the frame below</string>
    <string name="signin_header_text">Password Sign In</string>
    <string name="signin_label">Please sign in via your password.</string>
    <string name="signin_forgot_password">Forgot password?</string>
    <string name="label_signin_failed_info">Please try again or reset your account.\nAn email will be sent to you if you choose to reset your account.</string>
    <string name="button_reset_my_account">Reset My Account</string>
    <string name="button_back_to_sign_in_page">BACK TO SIGN IN PAGE</string>
    <string name="text_signin_failed">Sign In Failed</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_officer">Officer</string>
    <string name="label_incident">Incident</string>
    <string name="menu_task">Task</string>
    <string name="menu_message">Message</string>
    <string name="menu_logout">Logout</string>
    <string name="officer_label_name">Name</string>
    <string name="officer_label_filter_all_officer">Filter – All Officers</string>
    <string name="officer_label_active_officers">Active Officers</string>
    <string name="officer_label_attendence">Attendence</string>
    <string name="officer_label_task_completed">Tasks Completed</string>
    <string name="title_officer_monitoring">Officer Monitoring</string>
    <string name="title_activity_maps">Map</string>
    <string name="officer_label_pb_count">117</string>
    <string name="officer_label_pb_total">of 230</string>
    <string name="officer_label_pending_acknowledgement">Pending Acknowledgement</string>
    <string name="officer_label_task_header">Tasks</string>
    <string name="officer_label_task_sub_header">In Progress</string>
    <string name="dialog_filter_heading">Filter Options</string>
    <string name="dialog_filter_apply">APPLY</string>
    <string name="dialog_filter_cancel">CANCEL</string>
    <string name="dialog_filter_header_status">STATUS</string>
    <string name="dialog_filter_header_groups">GROUPS</string>
    <string name="dialog_filter_item_select_all">Select All</string>
    <string name="menu_cancel_task">CANCEL TASK</string>
    <string name="task_detail_label_catagory">Category</string>
    <string name="task_detail_label_subcatagory">Subcatagory</string>
    <string name="task_detail_label_incident_description">Incident Description</string>
    <string name="task_detail_label_incident_location">Incident Location</string>
    <string name="task_detail_label_incident_photo">Incident Photo/s</string>
    <string name="task_detail_label_subtasks">Subtasks</string>
    <string name="dialog_cancel_task_label">Are you sure you want to cancel this task?\n\nThe assigned officer will no longer be assigned and the details tied to the task will be deleted.\n\nThis action is permanent.</string>
    <string name="dialog_cancel_task_button1">Keep task</string>
    <string name="dialog_cancel_task_button2">Cancel Task</string>
    <string name="hint_message_to_officer">Message to Officer</string>
    <string name="title_message_officer">Message Officer</string>
    <string name="message_label_acknowledged">Acknowledged</string>
    <string name="task_label_latest_task_updates">Latest Task Updates</string>
    <string name="task_label_all">ALL</string>
    <string name="tasks_label_total_tasks">Total Tasks</string>
    <string name="task_label_unassigned">Unassigned</string>
    <string name="task_label_pending">Pending</string>
    <string name="tasks_label_open">OPEN</string>
    <string name="tasks_label_in_progress">In Progress</string>
    <string name="tasks_label_upcoming">Upcoming</string>
    <string name="tasks_label_closed">CLOSED</string>
    <string name="task_label_completetd">Completed</string>
    <string name="tasks_label_incomplete">Incomplete</string>
    <string name="tasks_heading_task_time">Tasks</string>
    <string name="task_heading_title">Task</string>
    <string name="task_heading_status">Status</string>
    <string name="tasks_heading_time_left">Time Left</string>
    <string name="title_task_management">Task Management</string>
    <string name="dialog_task_creation_heading">Task Creation</string>
    <string name="dialog_task_creation_label">Select a template for the new task:</string>
    <string name="task_creation_button_create">CREATE</string>
    <string name="hint_task_title">Enter task title...</string>
    <string name="label_task_add_catagory">Add Catagory</string>
    <string name="label_task_add_subcatagory">Add Subcatagory</string>
    <string name="label_task_add_type">Add Type</string>
    <string name="label_task_add_description">Add Description</string>
    <string name="label_task_add_location">Add Location</string>
    <string name="label_task_duration">Task Duration</string>
    <string name="label_add_duration">Add Duration</string>
    <string name="label_task_assignee">Assignee</string>
    <string name="label_add_task_assignee">Add Officer Assignee</string>
    <string name="label_add_task_assignee_note">Please specify a time first</string>
    <string name="label_create_task_subtasks">Subtasks</string>
    <string name="label_create_task_add_subtasks">Add a Subtask</string>
    <string name="hint_subtask_location">Add Location of Subtask</string>
    <string name="dialog_location_label_other">Other</string>
    <string name="label_start_date">Add Start Date</string>
    <string name="label_end_date">Add End Date</string>
    <string name="label_end_time">Add End Time</string>
    <string name="label_start_time">Add Start Time</string>
    <string name="label_choose_item">Choose a Item:</string>
    <string name="dialog_edit_subtask_heading">Edit Subtask</string>
    <string name="dialog_edit_subtask_button_save">Save</string>
    <string name="dialog_edit_subtask_label_title">Enter Subtask Title</string>
    <string name="dialog_edit_subtask_hint_title">Enter Subtask Title</string>
    <string name="dialog_edit_subtask_label_location">SUBTASK LOCATION</string>
    <string name="dialog_edit_subtask_add_location">Add Subtask Location</string>
    <string name="dialog_edit_subtask_label_type">Subtask Type</string>
    <string name="dialog_edit_subtask_add_type">Add Subtask Type</string>
    <string name="dialog_edit_subtask_label_end_time">Subtask End Time (Optional)</string>
    <string name="button_subtask_end_time_minus">- 5min</string>
    <string name="button_subtask_end_time_plus">+5min</string>
    <string name="dialog_subtask_type_heading">Subtask Type</string>
    <string name="dialog_subtask_type_label_qr_code">Scan QR Code</string>
    <string name="dialog_subtask_type_label_photo">Take Photo</string>
    <string name="dialog_subtask_type_label_empty">Empty Subtask</string>
    <string name="dialog_subtask_type_label_description">Mandatory Description</string>
    <string name="heading_incident_type">Incident Type</string>
    <string name="heading_reported_by">Reported By</string>
    <string name="heading_catagory">Catagory</string>
    <string name="label_list_filters">List Filters</string>
    <string name="label_catagories">Catagories</string>
    <string name="heading_incident_date_time"><![CDATA[Incident Date & Time]]></string>
    <string name="title_incident_report">Incident Report</string>
    <string name="button_mark_as_resolved">Mark As Resolved</string>
    <string name="button_create_task">Create Task</string>
    <string name="label_subcatagory">Subcatagory</string>
    <string name="label_time_of_incident">Time of Incident</string>
    <string name="dialog_incident_resolved_message">Are you sure you want to mark this Incident as Resolved? This action cannot be undone.</string>
    <string name="dialog_incident_resolved_btn_cancel">CANCEL</string>
    <string name="dialog_incident_resolved_btn_resolved">Mark as Resolved</string>
</resources>