<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout android:id="@+id/layout_password_criteria"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_password_criteria_outline"
    android:clipToPadding="false"
    android:padding="24dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_criteria_title"
        android:textColor="@color/textNormal"
        android:textSize="@dimen/textSizeLarge"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_character_criteria"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/password_character_criteria"
        android:textColor="@color/textNormal"
        android:textSize="@dimen/textSizeXLarge"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/dimens_8"
        android:layout_marginTop="@dimen/dimens_16"
        app:layout_constraintEnd_toStartOf="@id/tv_number_criteria"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_label" />

    <TextView
        android:id="@+id/tv_number_criteria"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/password_number_criteria"
        android:textColor="@color/textNormal"
        android:textSize="@dimen/textSizeXLarge"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/dimens_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/tv_character_criteria"
        app:layout_constraintTop_toBottomOf="@+id/tv_label" />

    <TextView
        android:id="@+id/tv_character_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimens_5"
        android:text="@string/password_character_label"
        android:textColor="@color/textPrimary"
        android:textSize="@dimen/textSizeNormal"
        app:layout_constraintEnd_toStartOf="@id/tv_number_label"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="@id/tv_character_criteria"
        app:layout_constraintTop_toBottomOf="@+id/tv_character_criteria" />

    <TextView
        android:id="@+id/tv_number_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimens_5"
        android:text="@string/password_number_label"
        android:textColor="@color/textPrimary"
        android:textSize="@dimen/textSizeNormal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/tv_character_label"
        app:layout_constraintTop_toBottomOf="@+id/tv_character_criteria" />

    <View
        android:id="@+id/view_seperator_bar1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginEnd="-24dp"
        android:layout_marginStart="-24dp"
        android:layout_marginTop="@dimen/dimens_16"
        android:background="@color/greyDark"
        app:layout_constraintTop_toBottomOf="@+id/tv_character_label" />

    <TextView
        android:id="@+id/tv_upper_alphabet_criteria"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimens_16"
        android:text="@string/password_lower_alphabet_criteria"
        android:textColor="@color/textNormal"
        android:textSize="@dimen/textSizeXLarge"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/tv_lower_alphabet_criteria"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="@id/tv_character_criteria"
        app:layout_constraintTop_toBottomOf="@+id/view_seperator_bar1" />

    <TextView
        android:id="@+id/tv_lower_alphabet_criteria"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimens_16"
        android:text="@string/password_upper_alphabet_criteria"
        android:textColor="@color/textNormal"
        android:textSize="@dimen/textSizeXLarge"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/tv_character_criteria"
        app:layout_constraintTop_toBottomOf="@+id/view_seperator_bar1" />

    <TextView
        android:id="@+id/tv_lower_alphabet_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimens_5"
        android:text="@string/password_lower_alphabet_label"
        android:textColor="@color/textPrimary"
        android:textSize="@dimen/textSizeNormal"
        app:layout_constraintEnd_toStartOf="@id/tv_number_label"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="@id/tv_character_criteria"
        app:layout_constraintTop_toBottomOf="@+id/tv_upper_alphabet_criteria" />

    <TextView
        android:id="@+id/tv_upper_alphabet_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimens_5"
        android:text="@string/password_upper_alphabet_label"
        android:textColor="@color/textPrimary"
        android:textSize="@dimen/textSizeNormal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/tv_character_label"
        app:layout_constraintTop_toBottomOf="@+id/tv_lower_alphabet_criteria" />


    <View
        android:id="@+id/view_seperator_bar2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginEnd="-24dp"
        android:layout_marginStart="-24dp"
        android:layout_marginTop="@dimen/dimens_16"
        android:background="@color/greyDark"
        app:layout_constraintTop_toBottomOf="@+id/tv_lower_alphabet_label" />


    <TextView
        android:layout_width="336dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:lineSpacingMultiplier="1.4"
        android:text="@string/password_rules"
        android:textColor="@color/textPrimary"
        android:textSize="@dimen/textSizeNormal"
        app:layout_constraintEnd_toEndOf="@id/tv_number_criteria"
        app:layout_constraintStart_toStartOf="@id/tv_character_criteria"
        app:layout_constraintTop_toBottomOf="@+id/view_seperator_bar2" />

</android.support.constraint.ConstraintLayout>












