<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/dimens_16"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/tv_cancel_task_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimens_24"
        android:lineSpacingMultiplier="1.6"
        android:text="@string/dialog_cancel_task_label"
        android:textColor="@color/textSecondary"
        android:textSize="@dimen/textSizeMedium2" />

    <TextView
        android:id="@+id/tv_keep_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:padding="5dp"
        android:layout_marginTop="@dimen/dimens_30"
        android:text="@string/dialog_cancel_task_button1"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@+id/tv_cancel_task_message"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_cancel_task" />

    <TextView
        android:id="@+id/tv_cancel_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/dialog_cancel_task_button2"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="@dimen/dimens_30"
        app:layout_constraintTop_toBottomOf="@+id/tv_cancel_task_message"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</android.support.constraint.ConstraintLayout>
