<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scroll_container"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    android:background="@color/white"
    xmlns:android="http://schemas.android.com/apk/res/android">
<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/components_vertical_margin"
        android:text="@string/text_registration_step"
        android:textAllCaps="true"
        android:textColor="@color/textPrimary"
        android:textSize="@dimen/textSizeNormal"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/pb_registration"/>

    <TextView
        android:id="@+id/tv_current_registration_step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens_4"
        android:layout_marginTop="@dimen/components_vertical_margin"
        android:text="@string/text_registration_step_1"
        android:textColor="@color/textPrimary"
        android:textSize="@dimen/textSizeNormal"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_password_label" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens_4"
        android:layout_marginTop="@dimen/components_vertical_margin"
        android:layout_toEndOf="@+id/tv_current_registration_step"
        android:text="@string/text_max_registration_step"
        android:textColor="@color/greyDark"
        android:textSize="@dimen/textSizeNormal"
        android:textStyle="bold"
        android:textColorHint="@color/textPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_current_registration_step" />

    <ProgressBar
        android:id="@+id/pb_registration"
        style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="500dp"
        android:layout_height="6dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dimens_8"
        android:progress="50"
        android:progressBackgroundTint="@color/greyDark"
        android:progressTint="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintEnd_toStartOf="@id/layout_password_criteria"
        app:layout_constraintTop_toBottomOf="@+id/tv_password_label" />

    <TextView
        android:id="@+id/tv_password_creation_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textSizeNormal"
        android:text="@string/password_creation_label"
        android:textColor="@android:color/black"
        android:layout_marginTop="@dimen/components_vertical_margin"
        app:layout_constraintTop_toBottomOf="@+id/pb_registration"
        app:layout_constraintStart_toStartOf="@id/pb_registration"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_password1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/RegisterTextInputLayoutStyle"
        android:layout_marginTop="@dimen/dimens_16"
        app:layout_constraintStart_toStartOf="@id/pb_registration"
        app:layout_constraintEnd_toStartOf="@id/til_password2"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintTop_toBottomOf="@+id/tv_password_creation_label">

        <com.certis_base_app.ui.custom_views.ClearableEditText
            android:id="@+id/cet_password1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/RegisterEditTextStyle"
            android:hint="@string/hint_enter_password"
            android:inputType="textPassword"
            android:imeOptions="actionNext"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/tv_password_criteria_fail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/password_criteria_fail"
        android:textColor="@color/textErrorRed"
        android:textSize="@dimen/textSizeMini"
        android:padding="@dimen/dimens_5"
        app:layout_constraintStart_toStartOf="@id/til_password1"
        app:layout_constraintEnd_toEndOf="@id/til_password1"
        app:layout_constraintTop_toBottomOf="@+id/til_password1"
        />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_password2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/RegisterTextInputLayoutStyle"
        android:layout_marginStart="@dimen/dimens_16"
        app:layout_constraintStart_toEndOf="@id/til_password1"
        app:layout_constraintEnd_toStartOf="@id/iv_password_visibilty"
        app:layout_constraintTop_toTopOf="@+id/til_password1">

        <com.certis_base_app.ui.custom_views.ClearableEditText
            android:id="@+id/cet_password2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/RegisterEditTextStyle"
            android:hint="@string/hint_confirm_password"
            android:inputType="textPassword"
            android:imeOptions="actionDone"/>

    </android.support.design.widget.TextInputLayout>


    <TextView
        android:id="@+id/tv_password_not_matched"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/password_not_matched"
        android:textColor="@color/textErrorRed"
        android:textSize="@dimen/textSizeMini"
        android:padding="@dimen/dimens_5"
        app:layout_constraintStart_toStartOf="@id/til_password2"
        app:layout_constraintEnd_toEndOf="@id/til_password2"
        app:layout_constraintTop_toBottomOf="@+id/til_password2"
        />

    <ImageView
        android:id="@+id/iv_password_visibilty"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:src="@drawable/ic_password_hidden"
        android:adjustViewBounds="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/til_password1"
        app:layout_constraintEnd_toEndOf="@+id/pb_registration"
        app:layout_constraintStart_toEndOf="@+id/til_password2"
        app:layout_constraintTop_toTopOf="@+id/til_password1"/>

    <Button
        android:id="@+id/btn_create_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="215dp"
        style="@style/RegisterNextBtnStyle"
        android:text="@string/password_create_password"
        android:enabled="false"
        android:alpha="0.5"
        app:layout_constraintEnd_toEndOf="@id/iv_password_visibilty"
        app:layout_constraintTop_toBottomOf="@id/pb_registration"/>

    <include
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dimens_40"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/pb_registration"
        layout="@layout/layout_password_criteria"/>

</android.support.constraint.ConstraintLayout>
</ScrollView>