<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/white">

<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.onboarding.login.PasswordSigninActivity">


    <TextView
        android:id="@+id/tv_signin_header_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signin_header_text"
        android:textSize="@dimen/textSizeXXXLarge"
        android:textStyle="bold"
        android:textColor="@color/textNormal"
        android:layout_marginBottom="@dimen/dimens_16"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tv_signin_label"
        app:layout_constraintStart_toStartOf="@id/til_password"
        app:layout_constraintVertical_chainStyle="packed"/>

    <TextView
        android:id="@+id/tv_signin_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signin_label"
        android:textSize="@dimen/textSizeNormal"
        android:textColor="@color/textNormal"
        app:layout_constraintTop_toBottomOf="@+id/tv_signin_header_text"
        app:layout_constraintBottom_toTopOf="@+id/til_password"
        app:layout_constraintStart_toStartOf="@id/til_password"
        android:layout_marginBottom="@dimen/dimens_50"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        style="@style/RegisterTextInputLayoutStyle"
        android:layout_marginBottom="@dimen/dimens_10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_signin_label"
        app:layout_constraintBottom_toTopOf="@+id/btn_next">

        <com.certis_base_app.ui.custom_views.ClearableEditText
            android:id="@+id/cet_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/RegisterEditTextStyle"
            android:hint="@string/hint_staff_id"
            android:inputType="textPassword"
            android:imeOptions="actionDone"/>

    </android.support.design.widget.TextInputLayout>


    <ImageView
        android:id="@+id/iv_password_visibilty"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:src="@drawable/ic_password_hidden"
        android:adjustViewBounds="true"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toEndOf="@+id/til_password"
        app:layout_constraintTop_toTopOf="@+id/til_password"
        app:layout_constraintBottom_toBottomOf="@+id/til_password"/>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:alpha="0.5"
        style="@style/RegisterNextBtnStyle"
        android:text="@string/next"
        android:layout_marginTop="@dimen/dimens_40"
        app:layout_constraintTop_toBottomOf="@id/til_password"
        app:layout_constraintEnd_toEndOf="@id/iv_password_visibilty"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signin_forgot_password"
        android:textSize="@dimen/textSizeNormal"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@+id/btn_next"
        app:layout_constraintBottom_toBottomOf="@+id/btn_next"
        app:layout_constraintStart_toStartOf="@id/til_password"/>
</android.support.constraint.ConstraintLayout>
</ScrollView>